@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2019-01-21 Mon 23:59 -->
+<!-- 2019-01-22 Tue 16:25 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Alexandre Giuliani</title>
@@ -260,25 +260,30 @@ for the JavaScript code in this tag.
   </ul>
 </div>
 
-<div id="outline-container-org1d04bfc" class="outline-2">
-<h2 id="org1d04bfc"><span class="todo TODO">TODO</span> News</h2>
-<div class="outline-text-2" id="text-org1d04bfc">
-<p>
-Coming soon <sup><a id="fnr.1" class="footref" href="#fn.1">1</a></sup>
-</p>
+<div id="outline-container-orgf0b4063" class="outline-2">
+<h2 id="orgf0b4063"><span class="todo TODO">TODO</span> News <sup><a id="fnr.1" class="footref" href="#fn.1">1</a></sup></h2>
+<div class="outline-text-2" id="text-orgf0b4063">
+</div>
+<div id="outline-container-org0ff10f7" class="outline-4">
+<h4 id="org0ff10f7"><b><span class="timestamp-wrapper"><span class="timestamp">&lt;2019-01-22 Tue&gt;</span></span></b> Our last results on radiation damage study based on DNA origami from our Universität Postdam colleagues is now out in <a href="https://doi.org/10.1039/C8CP06813E"><b>PCCP</b></a></h4>
 </div>
 </div>
 <div id="footnotes">
 <h2 class="footnotes">Footnotes: </h2>
 <div id="text-footnotes">
 
-<div class="footdef"><sup><a id="fn.1" class="footnum" href="#fnr.1">1</a></sup> <div class="footpara"></div></div>
+<div class="footdef"><sup><a id="fn.1" class="footnum" href="#fnr.1">1</a></sup> <div class="footpara"><div class="tl">
+  <ul>
+    <li><a class="twitter-timeline" data-height="800" data-theme="light" href="https://twitter.com/ajgiuliani?ref_src=twsrc%5Etfw">Tweets by ajgiuliani</a></li>
+    <li><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> ></li>
+  </ul>
+</div></div></div>
 
 
 </div>
 </div></div>
 <div id="postamble" class="status">
-<p class="date">Created: 2019-01-21 Mon 23:59</p>
+<p class="date">Created: 2019-01-22 Tue 16:25</p>
 <p class="creator"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 26.1 (<a href="https://orgmode.org">Org</a> mode 9.1.13)</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
