@@ -38,9 +38,17 @@
 </div>
 #+END_EXPORT
 
-* TODO News
-Coming soon [fn:1]
+* TODO News [fn:1]
+
 * Footnotes
 [fn:1]
+#+BEGIN_EXPORT html
+<div class="tl">
+  <ul>
+    <li><a class="twitter-timeline" data-height="800" data-theme="light" href="https://twitter.com/ajgiuliani?ref_src=twsrc%5Etfw">Tweets by ajgiuliani</a></li>
+    <li><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> ></li>
+  </ul>
+</div>
+#+END_EXPORT
 
 
